# code_doc_vector_store

./: ReadME.md  pyproject.toml
src/: code_splitter.py  file_management.py  main.py  milvus.py  report_generator.py
src/agent/: chat.py  gemin_code_doc_agent.py  sys_prompt.py  tools.py
src/classes/: FileNode.py  Milvus.py
